--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <section>
       <h2>About me</h2>
-      I want to be an explorer and an inventor.
+      Explore and Invent
     </section>
     <section>
       <h3>Photography</h3>
