--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 
 <html>
+  <header>
   <head>
     <h1>Kenton Kwok</h1>
   </head>
+  </header>
+
   <body>
     <section>
       <h2>About me</h2>
       Explore and Invent
     </section>
+
     <section>
       <h3>Photography</h3>
+    </section>
+
+    <section>
+      <h3>Writing</h3>
+      <a href= "./salzburg.html">The Allure of Salzburg</a>
     </section>
   </body>
 <html>
