--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 
 <html>
-  <header>
   <head>
-    <h1>Kenton Kwok</h1>
+    <title>Kenton Kwok</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
-  </header>
 
   <body>
-    <section>
-      <h2>About me</h2>
-      Explore and Invent
-    </section>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./aboutme.html">About me</a></li>
+          <li><a href="">Photography</a></li>
+          <li><a href="./writing.html">Writing</a></li>
+          <li><a href="">Science and Tech</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <section>
-      <h3>Photography</h3>
-    </section>
+    <div class=big>
+      <h1>Kenton <br> Kwok···</h1>
+    </div>
 
-    <section>
-      <h3>Writing</h3>
-      <a href= "./salzburg.html">The Allure of Salzburg</a>
-    </section>
+    <figure id="coverpic">
+      <img src="./media/profile.jpg" height="500px"/>
+    </figure>
+
+    <footer>
+      © Kenton Kwok 2020 | This website is one of my HTML/CSS projects, written by myself. 
+    </footer>
   </body>
 <html>
