Photo edits and markdown

--- a/about.html
+++ b/about.html
@@ -34,38 +34,22 @@
   </head>
 
   <body>
-      <!--<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column justify-content-center">
-        <header class="masthead mb-auto">
-          <div class="inner">
-            <h3 class="masthead-brand">Kenton Kwok</h3>
-            <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="./about.html">About</a>
-              <a class="nav-link" href="#">Travel</a>
-              <a class="nav-link" href="#">Photography</a>
-              <a class="nav-link" href="#">Projects</a>
-              <a class="nav-link" href="#">Blog</a>
-            </nav>
-          </div>
-        </header>
-      </div> -->
 
     <nav class="navbar justify-content-center navbar-dark fixed-top bg-dark">
       <header class="masthead mb-auto">
-      <div class="inner">
-        <h3 class="masthead-brand text-center">Kenton Kwok</h3>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link" href="./index.html">Home</a>
-          <a class="nav-link" href="./travel.html">Travel</a>
-          <a class="nav-link" href="#">Photography</a>
-          <a class="nav-link" href="#">Projects</a>
-          <a class="nav-link" href="#">Blog</a>
-          <a class="nav-link active" href="./about.html">About</a>
-        </nav>
-
-      </div>
-    </header>
-  </nav>
+        <div class="inner">
+          <h3 class="masthead-brand text-center">Kenton Kwok</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link" href="./travel.html">Travel</a>
+            <a class="nav-link" href="./photography.html">Photography</a>
+            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link active" href="./about.html">About</a>
+          </nav>
+        </div>
+      </header>
+    </nav>
 
 
 
