--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link active" href="#">Home</a>
 
           <a class="nav-link" href="./travel.html">Travel</a>
-          <a class="nav-link" href="#">Photography</a>
+          <a class="nav-link" href="./photography.html">Photography</a>
           <a class="nav-link" href="#">Projects</a>
           <a class="nav-link" href="#">Blog</a>
           <a class="nav-link" href="./about.html">About</a>
