--- a/salzburg.html
+++ b/salzburg.html
@@ -42,7 +42,7 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="./index.html">Home</a>
           <a class="nav-link" href="./travel.html">Travel</a>
-          <a class="nav-link" href="#">Photography</a>
+          <a class="nav-link" href="./photography.html">Photography</a>
           <a class="nav-link" href="#">Projects</a>
           <a class="nav-link" href="#">Blog</a>
           <a class="nav-link active" href="./about.html">About</a>
@@ -58,13 +58,11 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="layer">
   <div class="jumbotron splash" style="background-image: url(./media/salzburg.jpg);">
-    <!--<div class="layer"> -->
       <div class="container">
-        <h1 class="display-3">Salzburg</h1>
-        <p></p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1 class="display-3">Salzburg, Austria 🇦🇹</h1>
+        <p>City in Austria, central Europe | Capital of State of Salzburg. | 47°48′0″N 13°02′0″E <br> Population 157k <br> Famous for: Mozart, Sound of Music, Aldstat</p>
+        <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
       </div>
-    <!--</div>-->
   </div>
   </div>
 
@@ -72,7 +70,8 @@
     <div class= "row">
       <div class="col-md-8">
         <h2>The Allure of Salzburg</h2>
-        <p> We ventured into the baroque city of Salzburg, unknowing that it will be named the top city to travel to by Lonely Planet in just one month— though it is evident that its natural allure needs no affirmation. Packed with a burst of culture, Salzburg is a quaint place that every soul must visit once in a lifetime.</p>
+        <p class="text-muted">September 2019</p>
+        <p class="lead"> We ventured into the baroque city of Salzburg, unknowing that it will be named the top city to travel to by Lonely Planet in just one month— though it is evident that its natural allure needs no affirmation. Packed with a burst of culture, Salzburg is a quaint place that every soul must visit once in a lifetime.</p>
         <p>I visited the city along with my parents and it turned out to be quite a memorable farewell trip before I headed into university.</p>
         <p> As we stepped into the Altstadt (meaning 'old town'), the UNESCO protected historic city centre, it felt almost impossible not to feel lovestruck by the cosy cobbled streets and the rustic yet colourful buildings. We look up and see, just next to the bold display of the Austrian flag, a building painted a striking yellow— 'Mozarts Geburtshaus.' Individuals and groups from all over the world flock to 'Mozart's city' to view the birthplace of the single greatest composer who blessed the world with his musical talent. Now a museum, everyone can look at the artefacts and envision the stories that excited and troubled Wolfgang Amadeus Mozart's life.</p>
         <p> Mozart is almost worshipped in Salzburg. As we pranced by Mozartsteg (bridge) onto Mozartplatz (plaza), we couldn't help but notice the plethora of Mozart themed souvenirs on the street next to the tall monument of Mozart. The same portrait of a stern man with fine curled-up white hair in an iconic red coat adorns the postcards, keychains and specifically on the wrapper of a famed round pistachio-marzipan chocolate nougat called Mozartkugel.</p>
@@ -83,11 +82,10 @@
         <p>Be it music, architecture, food or culture, Salzburg has it all. One would think that visiting Austria's capital city Vienna is enough, but you would have only gained a small glimpse of the wealth of culture the country offers. As I finish this with Mozart's 'Marriage of Figaro' playing on my laptop, I find myself not only remembering the sights and experiences I had while travelling, not only the false sense of coincidental achievement I had as we visited Salzburg before a guidebook company gave it the title of 'Best in travel,' but also the people I travelled with— now some 6000 miles away.</p>
       </div>
       <div class="col-md-4 d-flex justify-content-center">
-        <img src="./media/profile.jpg" height = 400 alt="Myself in Tokyo!" class="rounded center">
+        <img src="./media/salz.jpg" height = 400 alt="Myself in Tokyo!" class="rounded center"></img>
       </div>
     </div>
   </div>
-
 
 </main>
 
