--- a/travel.html
+++ b/travel.html
@@ -42,7 +42,7 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="./index.html">Home</a>
           <a class="nav-link active" href="./travel.html">Travel</a>
-          <a class="nav-link" href="#">Photography</a>
+          <a class="nav-link" href="./photography.html">Photography</a>
           <a class="nav-link" href="#">Projects</a>
           <a class="nav-link" href="#">Blog</a>
           <a class="nav-link" href="./about.html">About</a>
@@ -78,7 +78,7 @@
           <div class="card-body">
             <h5 class="card-title">Rome, Italy</h5>
             <p class="card-text">Rome is where western civilisation budded and bloomed. Legend says that Rome began with a story of betrayal between two brothers, Romulus and Remus in ~750 BC. How a small village atop of the river Tiber and seven hills became one of the most powerful empires in the world is still much debated by historians... </p>
-            <p><a class="btn btn-secondary btn-sm" href="#" role="button">Read more &raquo;</a></p>
+            <p><a class="btn btn-secondary btn-sm" href="./rome.html" role="button">Read more &raquo;</a></p>
             <p class="card-text"><small class="text-muted">Jan-2020</small></p>
           </div>
         </div>
