Font and favicon

--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+<link rel="icon" type="image/ico" href="favicon.png"/>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -60,7 +61,7 @@
       <div class="container">
         <h1 class="display-3">Photography</h1>
         <p>Taking photos is just a small hobby that I do in my spare time, which started out as something I paid extra attention to during my travels. I'm still learning and trying to experiment with different styles and techniques. </p>
-        <p><a class="btn btn-primary btn-lg" target="_blank" href="https://www.instagram.com/kurnturn/" role="button"><i class="fa fa-instagram"></i> Visit my instagram&raquo;</a></p> 
+        <p><a class="btn btn-primary btn-lg" target="_blank" href="https://www.instagram.com/kurnturn/" role="button"><i class="fa fa-instagram"></i> Visit my instagram&raquo;</a></p>
       </div>
   </div>
 
