--- a/rome.html
+++ b/rome.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -70,7 +70,7 @@
     <div class= "row">
       <div class="col-md-8">
         <h2>A trip to Rome</h2>
-        <p class="text-muted">September 2019</p>
+        <p class="text-muted">January 2020</p>
         <p class="lead"> Rome is where western civilisation budded and bloomed. Legend says that Rome began with a story of betrayal between two brothers, Romulus and Remus in ~750 BC. How a small village atop of the river Tiber and seven hills became one of the most powerful empires in the world is still much debated by historians (see SPQR by Mary Beard). Military conquests expanded its sphere of influence as far as Britain to the west and in the Iran to the east. Aside from spatial dominance, Rome leaves its legacy in political, infrastructural and cultural aspects until present day. </p>
         <p>To the present day tourist, Rome's uniqueness effervesces first from its ancient classical beauty in the form of architectural sights, ruins and art and second from its drool-inducing food scene. This precisely led six Imperial students to visit the Italian city in the first month of 2020.</p>
         <p>I left for the airport in a rather cinematic fashion (with some tight cuts and thumping cinematic music). After my labs ended at 5pm at Blackett, I paced back to my room in Beit and replaced my usual backpack load of books and stationery with thick clothes and toiletries. We then hurried to Gatwick airport, after a quick bite of Halloumi. </p>
